<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.neighbour_list.NeighbourDetail">




    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">



        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="@+id/item_list_name"
            >
            <ImageView
                android:id="@+id/item_list_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.0"
                />

            <!--    centerCrop to get image matches full parent
                       -->

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <!--    android:layout_height="?attr/actionBarSize"
                    This option enable the to match behavior of the
                    actionBar (smoothly general scroll-up
                    solves bug with home button not showing completely
                     -->
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_to_favorite_bt"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginRight="8dp"
        android:tint="#FFEB3B"
        app:backgroundTint="#FDFCFC"
        app:layout_anchor="@id/toolbar_layout"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@android:drawable/btn_star"
        />




    <include layout="@layout/content_neighbour_detail" />



</android.support.design.widget.CoordinatorLayout>